--- a/2/2.1.html
+++ b/2/2.1.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="lenguajes-de-programación"><a class="header" href="#lenguajes-de-programación">Lenguajes de programación</a></h1>
-<p>Los lenguajes de programación permitidos varían de una competencia a otra, permitiendo en algunos casos el uso de lenguajes no estándar como <em>Kotlin</em> o <em>Haskell</em>. Sin embargo, en su mayor parte, se permiten <em>C++</em>, <em>Python</em> y <em>Java</em>. Esta guía estará escrita en <em>C++</em> y se espera que el lector esté familiarizado con <em>C</em>. De todas formas, exceptuando las líneas de código, los temas están dados de forma general.</p>
+<p>Los lenguajes de programación permitidos varían de una competencia a otra, permitiendo en algunos casos el uso de lenguajes no estándar como Kotlin o Haskell. Sin embargo, en su mayor parte, se permiten C++, Python y Java. Esta guía está en C++ y esperamos que el lector esté familiarizado con C. De todas formas, exceptuando las líneas de código, los temas están dados de forma genérica.</p>
 
                     </main>
 
