--- a/3/modular.html
+++ b/3/modular.html
@@ -182,7 +182,7 @@
 <center>
 <i>Los números no, sus restos.</i>
 </center>
-<p>En muchas situaciones, sucede que el problema lidia conceptualmente con números de magnitudes inmensas (\(&gt;10^{18}\)), lo que causa ciertas incomodidades cuando tenemos que operar con ellos. Resulta que una solución común a esta problemática es pedir el resultado módulo un número primo grande. En esta sección vemos operaciones básicas de la aritmética modular.</p>
+<p>En muchas situaciones, la solución a un problema requiere lidiar con números de magnitudes inmensas (\(&gt;10^{18}\)), lo que causa ciertas incomodidades cuando tenemos que operar con ellos. Una solución común a esta problemática es pedir el resultado módulo un número primo grande. En esta sección vemos operaciones básicas de la aritmética modular.</p>
 <h2 id="repaso-de-operaciones-básicas"><a class="header" href="#repaso-de-operaciones-básicas">Repaso de operaciones básicas</a></h2>
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
@@ -195,7 +195,7 @@
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
 </blockquote>
-<p>Se muestra como exponenciar en \(\Theta(log(n))\). Como detalle, se añade que sea modular, pero esto es opcional.</p>
+<p>Se muestra cómo exponenciar en \(\Theta(log(n))\). Como detalle, se añade que sea modular, pero esto es opcional.</p>
 <h3 id="algoritmo-modpow-exponenciación-rápida"><a class="header" href="#algoritmo-modpow-exponenciación-rápida"><strong>Algoritmo:</strong> modPow (Exponenciación Rápida)</a></h3>
 <pre><code class="language-cpp">tint modPow(tint x, tint n, const tint MOD)
 {
