--- a/introduction_1.html
+++ b/introduction_1.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="1-introducción"><a class="header" href="#1-introducción">1 Introducción</a></h1>
-<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener o no una diferencia de puntuación, y el ganador es el concursante o equipo con mayor puntaje y menor penalidad (esta suele ser una combinación entre tiempo de resolución y envíos incorrectos).</p>
+<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener distintos puntajes; el ganador es el concursante o equipo con mayor cantidad de puntos y menor penalidad, que suele estar dada por una combinación entre tiempo de resolución y envíos incorrectos.</p>
 
                     </main>
 
