--- a/2/2.3.html
+++ b/2/2.3.html
@@ -186,7 +186,7 @@
     cout &lt;&lt; fixed &lt;&lt; setprecision(digits) &lt;&lt; number;
 </code></pre>
 <ul>
-<li><strong>long long int</strong> - este es un número entero pero con el doble de bits. Se usa cuando un <strong>int</strong> no es suficiente. En mi opinión, este es el tipo de datos más útil y normalmente lo uso de forma predeterminada, en lugar de <strong>int</strong>.</li>
+<li><strong>long long int</strong> - este es un número entero pero con el doble de bits. Se usa cuando un <strong>int</strong> no es suficiente. En nuestra opinión, este es el tipo de datos más útil y normalmente se usa de forma predeterminada, en lugar de <strong>int</strong>.</li>
 </ul>
 
                     </main>
