--- a/2/2.5.html
+++ b/2/2.5.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="cómo-practicar"><a class="header" href="#cómo-practicar">Cómo practicar</a></h1>
-<p>Practicar no es trivial, ya que depende de la resiliencia, conocimiento y motivación del estudiante. A continuación, se enlazan algunos recursos útiles sobre este tema:</p>
+<p>Practicar no es trivial, ya que depende de la resiliencia, conocimiento y motivación del estudiante. A continuación, enlazamos algunos recursos útiles sobre este tema:</p>
 <ul>
 <li><a href="https://codeforces.com/blog/entry/91114">My opinion on how to practice competitive programming - Radewoosh</a></li>
 <li><a href="https://codeforces.com/blog/entry/98806">How to practice Competitive Programming - Um_nik</a></li>
