--- a/3/Introduccion.html
+++ b/3/Introduccion.html
@@ -176,7 +176,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="matemáticas"><a class="header" href="#matemáticas">Matemáticas</a></h1>
-<p>A diferencia de los otros temas que serán mencionados en la guía, es esperable que no estén familiarizados con la mayoría de los algoritmos en esta sección, por eso se recomienda que sea leída por todos los integrantes del equipo.</p>
+<p>A diferencia de los otros temas que serán mencionados en la guía, los algoritmos de esta sección no entran dentro del temario de <em>Algoritmos y Estructuras de Datos</em>. Por eso, sugerimos que todos los miembros del equipo lean esta sección.</p>
 
                     </main>
 
