correccion de facu

--- a/3/modular.html
+++ b/3/modular.html
@@ -216,7 +216,9 @@
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
 </blockquote>
-<p>Dividir no es tan fácil en la aritmética modular.</p>
+<center>
+<i>Dividir no es tan fácil en la aritmética modular</i>
+</center>
 <h3 id="pequeño-teorema-de-fermat-fermatito"><a class="header" href="#pequeño-teorema-de-fermat-fermatito">Pequeño Teorema de Fermat (Fermatito)</a></h3>
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
