--- a/print.html
+++ b/print.html
@@ -422,7 +422,7 @@ forsn(i, 2, n+1)
 </code></pre>
 <ul>
 <li>Memoria: \( \Theta(1) \)</li>
-<li>Complejidad \( \Theta(\sqrt{n}) \)</li>
+<li>Complejidad \( \Theta(\n \log{n}) \)</li>
 </ul>
 <p>La magia está en la serie armónica:</p>
 <blockquote>
@@ -542,7 +542,9 @@ $$4 = \text{{2, 0}}$$</p>
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
 </blockquote>
-<p>Dividir no es tan fácil en la aritmética modular.</p>
+<center>
+<i>Dividir no es tan fácil en la aritmética modular</i>
+</center>
 <h3 id="pequeño-teorema-de-fermat-fermatito"><a class="header" href="#pequeño-teorema-de-fermat-fermatito">Pequeño Teorema de Fermat (Fermatito)</a></h3>
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
