correccion de facu

--- a/print.html
+++ b/print.html
@@ -422,7 +422,7 @@ forsn(i, 2, n+1)
 </code></pre>
 <ul>
 <li>Memoria: \( \Theta(1) \)</li>
-<li>Complejidad \( \Theta(\n \log{n}) \)</li>
+<li>Complejidad \( \Theta(n \log(n)) \)</li>
 </ul>
 <p>La magia está en la serie armónica:</p>
 <blockquote>
