--- a/2/2.4.html
+++ b/2/2.4.html
@@ -230,7 +230,7 @@ inline void chmin(T &amp;lhs, T rhs)
 }
 </code></pre>
 <h2 id="funciones-para-debuggear"><a class="header" href="#funciones-para-debuggear">Funciones para debuggear</a></h2>
-<pre><code class="language-cpp">// printea pairs, sirve para debuggear
+<pre><code class="language-cpp">// imprime pairs, sirve para debuggear
 template &lt;typename T, typename U&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
 {
@@ -238,7 +238,7 @@ ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
     return os;
 }
 
-// printea vectores, sirve para debuggear
+// imprime vectores, sirve para debuggear
 template &lt;typename T&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const vector&lt;T&gt; &amp;v)
 {
