--- a/3/combi.html
+++ b/3/combi.html
@@ -187,7 +187,7 @@
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
 </blockquote>
-<p>Si cursaron probabilidad, están familiarizados con el coeficiente binomial: la forma de contar cuántas formas existen para elegir \(k\) elementos de un conjunto de \(n\) elementos posibles. Disponemos de una fórmula cerrada para calcularlo:</p>
+<p>Si cursaron probabilidad, están familiarizados con el coeficiente binomial. Es la forma de contar cuántas formas existen para elegir \(k\) elementos de un conjunto de \(n\) elementos posibles. Disponemos de una fórmula cerrada para calcularlo:</p>
 <p>$$
 {n \choose k} = \frac{n!}{(n-k)!k!}
 $$</p>
