--- a/print.html
+++ b/print.html
@@ -270,7 +270,7 @@ inline void chmin(T &amp;lhs, T rhs)
 }
 </code></pre>
 <h2 id="funciones-para-debuggear"><a class="header" href="#funciones-para-debuggear">Funciones para debuggear</a></h2>
-<pre><code class="language-cpp">// printea pairs, sirve para debuggear
+<pre><code class="language-cpp">// imprime pairs, sirve para debuggear
 template &lt;typename T, typename U&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
 {
@@ -278,7 +278,7 @@ ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
     return os;
 }
 
-// printea vectores, sirve para debuggear
+// imprime vectores, sirve para debuggear
 template &lt;typename T&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const vector&lt;T&gt; &amp;v)
 {
@@ -588,7 +588,7 @@ tint numDivididoPor2 = (num * modInv(2, MOD)) % MOD;
 <blockquote>
 <p>Importancia: <font color="green">Alta</font></p>
 </blockquote>
-<p>Si cursaron probabilidad, están familiarizados con el coeficiente binomial: la forma de contar cuántas formas existen para elegir \(k\) elementos de un conjunto de \(n\) elementos posibles. Disponemos de una fórmula cerrada para calcularlo:</p>
+<p>Si cursaron probabilidad, están familiarizados con el coeficiente binomial. Es la forma de contar cuántas formas existen para elegir \(k\) elementos de un conjunto de \(n\) elementos posibles. Disponemos de una fórmula cerrada para calcularlo:</p>
 <p>$$
 {n \choose k} = \frac{n!}{(n-k)!k!}
 $$</p>
